2004-09-24  Roland McGrath  <roland@redhat.com>

	[BZ #406]
	* sysdeps/i386/tls.h: Move #include "useldt.h" outside
	of [__ASSUME_LDT_WORKS > 0] test.
	Reported by Carlos Velasco <carlos.velasco@newipnet.com>.

2004-09-21  Roland McGrath  <roland@redhat.com>

	* Versions: Add comment about linuxthreads' frozen ABI.

2004-09-20  Ulrich Drepper  <drepper@redhat.com>

	* Versions: Remove exports for pthread_set*id_np functions.
	* sysdeps/pthread/pthread.h: Remove pthread_set*id_np prototypes
	for now.
	* Makefile: Don't build pthread_set*id code for now.

2004-09-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h: Declare pthread_setgid_np,
	pthread_setuid_np, pthread_setegid_np, pthread_seteuid_np,
	pthread_setregid_np, pthread_setreuid_np, pthread_setresgid_np,
	and pthread_setresuid_np.
	* pthread_setgid_np.c: New file.
	* pthread_setuid_np.c: New file.
	* pthread_setegid_np.c: New file.
	* pthread_seteuid_np.c: New file.
	* pthread_setregid_np.c: New file.
	* pthread_setreuid_np.c: New file.
	* pthread_setresgid_np.c: New file.
	* pthread_setresuid_np.c: New file.
	* Versions [libpthread, GLIBC_2.3.4]: Add pthread_setgid_np,
	pthread_setuid_np, pthread_setegid_np, pthread_seteuid_np,
	pthread_setregid_np, pthread_setreuid_np, pthread_setresgid_np,
	and pthread_setresuid_np.
	* Makefile (libpthread-routines): Add pthread_setuid, pthread_seteuid,
	pthread_setreuid, pthread_setresuid, pthread_setgid, pthread_setegid,
	pthread_setregid, and pthread_setresgid.

2004-09-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h: Make rwlock prototypes available also
	for __USE_XOPEN2K.
	* sysdeps/pthread/bits/pthreadtypes.h: Define rwlock types also
	for __USE_XOPEN2K.  [BZ #320]

2004-09-04  Jakub Jelinek  <jakub@redhat.com>

	* tst-cancel4.c (tf_waitid): Use WEXITED flag bit if available.

2004-09-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h (pthread_once): Remove __THROW since